home Page Updated.

--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -52,6 +52,9 @@
                 </select>
             </div>
 
+            <label for="fileUpload" class="file-label">Upload File</label>
+            <input type="file" class="form-control" id="fileUpload" th:field="*{thumbnail}">
+
             <!-- Rich Text Editor -->
             <div class="toolbar">
                 <button type="button" class="toolbar-btn" onclick="changeFontSize()">Font</button>
