users page created

--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -34,14 +34,10 @@
             <li><a class="ad-dropdown-item" href="/admin/posts">View All Posts</a></li>
           </ul>
         </li>
-        <li class="ad-nav-item dropdown">
-          <a class="ad-nav-link dropdown-toggle" href="#" id="ad-userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="ad-nav-item">
+          <a class="ad-nav-link" href="/admin/user" id="ad-userDropdown" role="button" aria-expanded="false">
             User
           </a>
-          <ul class="ad-dropdown-menu" aria-labelledby="ad-userDropdown">
-            <li><a class="ad-dropdown-item" href="#">Add Admin</a></li>
-            <li><a class="ad-dropdown-item" href="#">Show Admin List</a></li>
-          </ul>
         </li>
         <li class="ad-nav-item dropdown">
           <button class="ad-nav-link dropdown-toggle" id="ad-profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="background: none; border: none; padding: 0;">
