--- a/src/main/resources/static/assets/css/post-form.css
+++ b/src/main/resources/static/assets/css/post-form.css
@@ -130,3 +130,26 @@ select {
         transform: scale(1);
     }
 }
+
+#bodyDescription {
+    height: 100%;
+    /* added these styles */
+    flex: 1;
+    overflow-y: auto;
+    width: 100%;
+  }
+  
+.ql-container {
+    min-height: 10rem;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
+.ql-editor {
+    height: 100%;
+    flex: 1;
+    overflow-y: auto;
+    width: inherit;
+  }
