--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POST Form</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Richtext editor -->
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
+    <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/post-form.css">
@@ -56,29 +58,13 @@
             <input type="file" class="form-control" id="fileUpload" th:field="*{thumbnail}">
 
             <!-- Rich Text Editor -->
-            <div class="toolbar">
-                <button type="button" class="toolbar-btn" onclick="changeFontSize()">Font</button>
-                <!-- <button type="button" class="toolbar-btn" onclick="insertImage()">Insert Image</button> -->
-                <button type="button" class="toolbar-btn" onclick="execCommand('bold')"><i class="fas fa-bold"></i> Bold</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('italic')"><i class="fas fa-italic"></i> Italic</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('underline')"><i class="fas fa-underline"></i> Underline</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('justifyLeft')"><i class="fas fa-align-left"></i> Left</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('justifyCenter')"><i class="fas fa-align-center"></i> Center</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('justifyRight')"><i class="fas fa-align-right"></i> Right</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('insertOrderedList')"><i class="fas fa-list-ol"></i> OL</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('insertUnorderedList')"><i class="fas fa-list-ul"></i> UL</button>
-                <button type="button" class="toolbar-btn" onclick="createLink()"><i class="fas fa-link"></i> Link</button>
-                <button type="button" class="toolbar-btn" onclick="execCommand('unlink')"><i class="fas fa-unlink"></i> Unlink</button>
-                <button id="showHtmlButton" type="button" class="btn btn-danger" onclick="clickedShowHtml()"> Show Html </button>
-                <button id="showBeautifiedButton" type="button" class="btn btn-success" onclick="clickedShowBeautified()" disabled> Show Beautified </button>
+            <label for="bodyDescription" class="col-form-label"><strong>Post Body</strong></label> &nbsp;&nbsp;
+            <button id="showHtmlButton" type="button" class="btn btn-danger mb-2" onclick="clickedShowHtml()"> Show Html </button>
+            <button id="showBeautifiedButton" type="button" class="btn btn-success mb-2" onclick="clickedShowBeautified()" disabled> Show Beautified </button>
+            <div class="" id="bodyDescription">
+                    
             </div>
-
-            <!-- Editor -->
-            <div id="editor" class="editor-container" contenteditable="true">
-                Start writing here...
-            </div>
-            <textarea hidden th:field="*{body}" id="bodyHtmlTextArea"></textarea>
-
+            <textarea hidden th:field="*{body}" id="bodyDescriptionHtml"></textarea>
             <!-- Visibility -->
             <div class="mb-3">
                 <label for="visibility" class="form-label">Visibility</label>
@@ -100,6 +86,7 @@
     <br>
     <div th:replace="~{fragments/footer :: footer}"></div>
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
     <script th:src="@{/assets/js/admin-post-form.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
