--- a/src/main/resources/static/assets/css/post-form.css
+++ b/src/main/resources/static/assets/css/post-form.css
@@ -16,7 +16,7 @@ body {
     animation: fadeIn 0.5s ease-in-out;
 }
 
-h2 {
+.custom-h2 {
     font-weight: 700;
     color: #fff;
     text-align: center;
@@ -131,25 +131,4 @@ select {
     }
 }
 
-#bodyDescription {
-    height: 100%;
-    /* added these styles */
-    flex: 1;
-    overflow-y: auto;
-    width: 100%;
-  }
-  
-.ql-container {
-    min-height: 10rem;
-    height: 100%;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-.ql-editor {
-    height: 100%;
-    flex: 1;
-    overflow-y: auto;
-    width: inherit;
-  }
+.ql-toolbar { position: absolute; top: 0;left:0;right:0}
