subtitle field added and capacity4096 chars

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,8 +30,9 @@
           <ul class="dropdown-menu" aria-labelledby="discoverDropdown">
             <li><a class="dropdown-item" href="/who-we-are">Who We Are</a></li>
             <li><a class="dropdown-item" href="/what-we-do">What We Do</a></li>
-            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/mission-vision">Mission & Vision</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/tlp">TLP</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
