--- a/src/main/resources/static/assets/css/postlist-style-1.css
+++ b/src/main/resources/static/assets/css/postlist-style-1.css
@@ -3,7 +3,7 @@
     padding: 20px;
     margin: auto;
     max-width: 1200px;
-    background-color: green; /* Added green background */
+    background-color: rgb(217, 247, 217); /* Added green background */
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Subtle shadow */
     animation: fadeIn 0.8s ease-in-out;
