--- a/src/main/resources/templates/admin/admin-post-edit-form.html
+++ b/src/main/resources/templates/admin/admin-post-edit-form.html
@@ -50,6 +50,7 @@
                     <option value="notices">Notices</option>
                     <option value="news">News</option>
                     <option value="events">Events</option>
+                    <option value="magazines">Magazines</option>
                 </select>
             </div>
 
