--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -51,6 +51,7 @@
                     <option value="notices">Notices</option>
                     <option value="news">News</option>
                     <option value="events">Events</option>
+                    <option value="magazines">Magazines</option>
                 </select>
             </div>
 
