--- a/src/main/resources/templates/post/post-list.html
+++ b/src/main/resources/templates/post/post-list.html
@@ -29,7 +29,8 @@
             <!-- Post Item -->
             <div class="col-md-6 col-lg-4 mb-4" th:each="post : ${postList}">
                 <div class="card h-100">
-                    <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'" class="card-img-top" alt="Post Image">
+                    <img th:src="'/assets/images/thumbnails/' + ${category} + '.png'" th:if="${post.getThumbnail() == 'null'}" class="card-img-top" alt="Post Image">
+                    <img th:src="'/media?id=' + ${post.getThumbnail()}" th:unless="${post.getThumbnail() == 'null'}" class="card-img-top" alt="Post Image">
                     <div class="card-body">
                         <a th:href="'/'+${post.getCategory()}+'/'+${post.getUri()}" class="card-title">
                             <h4 th:text="${post.getTitle()}">Post Title</h4>
