--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,8 +26,8 @@
 
 <section class="hesec-hero">
   <div class="hesec-hero-content">
-      <h1>Dynamic Hero Section</h1>
-      <p>Designing a smart, responsive, and animated hero section.</p>
+      <h1>BGD e-GOV CIRT</h1>
+      <p>N-CERT of Bangladesh</p>
       <button>Learn More</button>
   </div>
 </section>
