--- a/src/main/resources/static/assets/css/homepage.css
+++ b/src/main/resources/static/assets/css/homepage.css
@@ -44,7 +44,6 @@ body {
 .hesec-hero h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
-    text-transform: uppercase;
     letter-spacing: 3px;
     animation: hesec-slideInDown 1s ease-in-out;
 }
@@ -58,7 +57,7 @@ body {
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     color: #fff;
-    background-color: #007bff;
+    background-color: #39e742;
     border: none;
     border-radius: 5px;
     cursor: pointer;
