--- a/src/main/resources/templates/admin/admin-post-edit-form.html
+++ b/src/main/resources/templates/admin/admin-post-edit-form.html
@@ -51,6 +51,9 @@
                     <option value="news">News</option>
                     <option value="events">Events</option>
                     <option value="magazines">Magazines</option>
+                    <option value="guidelines">Guidelines</option>
+                    <option value="acts">Acts</option>
+                    <option value="policies">Policies</option>
                 </select>
             </div>
 
